# OmniXy

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  conftest.py  hello.py  pyproject.toml  requirements-dev.txt  requirements.txt  status.md
.github/workflows/: ci.yml
docs/: architecture.md  mcp_protocol.md  orchestration.md  provider_drivers.md  purpose.md  roadmap.md  security.md
examples/: github_integration.py
src/: client.py
src/core/: driver_factory.py  mcp_layer.py  request.py  response.py  schema_generator.py  settings.py
src/drivers/: anthropic_driver.py  cohere_driver.py  driver_factory.py  gemini_driver.py  github_driver.py  local_llm_driver.py  openai_driver.py
src/orchestration/: chain_of_thought.py
src/plugin/: plugin_manager.py
src/workflow/: workflow_manager.py
tests/: conftest.py  test_github_driver.py
tests/integration/: test_mcp_providers.py  test_workflow_plugin_integration.py
tests/unit/: test_anthropic_driver.py  test_chain_of_thought.py  test_driver_factory.py  test_mcp_layer.py  test_plugin_manager.py  test_request.py  test_response.py  test_workflow_manager.py
